--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <footer>
         <p>
-            Fonte <a href="https://euamoguarajuba.com.br" target="_blank">euamoguarajuba</a> | Site desenvolvido por <a href="https://github.com/queirozt" target="_blank">Tiago Queiroz</a>
+            Fonte <a href="https://euamoguarajuba.com.br/historia" target="_blank">euamoguarajuba</a> | Site desenvolvido por <a href="https://github.com/queirozt" target="_blank">Tiago Queiroz</a>
         </p>
     </footer>
 </body>
